feat(api): get incoming request detail from histories;
